functioning CQRS Pub-Sub example

--- a/code/src/app/home/templates/home.pug
+++ b/code/src/app/home/templates/home.pug
@@ -3,7 +3,7 @@ extends ../../common-templates/layout
 block content
     h1 This is the home page
 
-    p Viewers have watched #{videosWatched || 0} video(s).
+    p Viewers have watched #{ videosWatched || 0} video(s).
 
     form(action="/record-viewing/12345" method="POST")
-        button(type="submit") Record viewing video
+        button.btn.btn-outline-secondary(type="submit") Record viewing video
