--- a/code/src/app/common-templates/layout.pug
+++ b/code/src/app/common-templates/layout.pug
@@ -2,8 +2,8 @@ doctype html
 head
     title Video Tutorials
 
-    link(href="/css/fonts.css" rel="stylesheet")
-    link(href="/css/bootstrap.min.css" rel="stylesheet")
+    link(href="http://fonts.cdnfonts.com/css/squad" rel="stylesheet")
+    link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet")
 
 body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
